--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,11 +81,12 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
-    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
 //apply plugin: 'com.google.gms.google-services'
 
