--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -82,12 +82,6 @@
         <activity
             android:name=".ui.activities.AppGlobalContainerActivity"
             android:label="@string/app_name" />
-        <activity
-            android:name=".ui.activities.DoctorConnectActivity"
-            android:configChanges="orientation|keyboard|screenSize"
-            android:label="@string/doctor_connect"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan" />
 
         <activity
             android:name=".ui.activities.ChatActivity"
