--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     }
     compile 'com.google.android.gms:play-services-auth:11.0.4'
     compile 'com.google.android.gms:play-services-places:11.0.4'
+    compile 'com.google.android.gms:play-services-location:11.0.4'
+
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -104,7 +106,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
 
-    compile ('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
+    compile('com.github.ozodrukh:CircularReveal:1.1.1@aar') {
         transitive = true;
     }
 }
