--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,6 @@
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -40,7 +39,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
 
         <activity
@@ -48,11 +47,12 @@
             android:configChanges="orientation|keyboard|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".ui.activities.HomePageActivity"
@@ -86,7 +86,6 @@
         <activity
             android:name=".ui.activities.AppGlobalContainerActivity"
             android:label="@string/app_name" />
-
         <activity
             android:name=".ui.activities.ChatActivity"
             android:label="@string/title_activity_chat"
@@ -98,7 +97,6 @@
             android:name=".broadcast_receivers.ReplayBroadcastReceiver"
             android:enabled="true"
             android:exported="false" />
-
         <receiver
             android:name=".broadcast_receivers.FileUploadReceiver"
             android:exported="false">
@@ -111,7 +109,6 @@
             android:name=".ui.activities.ZoomImageViewActivity"
             android:label="@string/title_activity_zoomview"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".ui.activities.PatientConnectActivity"
             android:configChanges="orientation|keyboard|screenSize"
@@ -125,6 +122,10 @@
             </intent-filter>
         </receiver>
 
+        <activity
+            android:name=".ui.activities.LocationPickerActivity"
+            android:label="@string/title_activity_location_picker"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
