--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,6 +126,12 @@
             android:name=".ui.activities.LocationPickerActivity"
             android:label="@string/title_activity_location_picker"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".ui.activities.ConnectSplashActivity"
+            android:configChanges="orientation|keyboard|screenSize"
+            android:label="@string/patient_connect"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
