--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,10 @@ dependencies {
         transitive = true;
     }
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+
+    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar') {
+        transitive = true
+    }
 }
 //apply plugin: 'com.google.gms.google-services'
 
