--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile project(':advanced_recycler')
+
     // Recommended
     compile('com.philliphsu:bottomsheetpickers:2.3.3') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
@@ -84,14 +87,9 @@ dependencies {
     compile project(':slideview')
     compile project(':crystalrangeseekbar')
     compile project(':fabmenu')
-    compile project(':advanced_recycler')
-
 
     compile "com.android.support:gridlayout-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
-    compile "com.android.support:appcompat-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
-    compile "com.android.support:recyclerview-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
     compile "com.android.support:cardview-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
-    compile "com.android.support:support-v4:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
     compile "com.android.support:design:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
     //    compile 'com.google.android.gms:play-services:10.2.4'
     compile('com.github.hotchemi:permissionsdispatcher:2.4.0') {
@@ -131,7 +129,7 @@ configurations.all {
         def requested = details.requested
         if (requested.group == 'com.android.support') {
             if (!requested.name.startsWith("multidex")) {
-                details.useVersion '25.3.0'
+                details.useVersion "${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
             }
         }
     }
