--- a/filepicker/src/main/AndroidManifest.xml
+++ b/filepicker/src/main/AndroidManifest.xml
@@ -10,10 +10,9 @@
         android:supportsRtl="true">
         <activity
             android:name=".FilePickerActivity"
-            android:configChanges="orientation|keyboardHidden"></activity>
+            android:configChanges="orientation|keyboardHidden"/>
         <activity android:name=".MediaDetailsActivity"
-            android:configChanges="orientation|keyboardHidden"></activity>
-
+            android:configChanges="orientation|keyboardHidden"/>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.droidninja.filepicker.provider"
