--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,10 +68,7 @@
             android:name=".ui.activities.waiting_list.WaitingMainListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ui.fragments.patient.patient_history_fragment.ComplaintsActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".ui.activities.MapActivityShowDoctorLocation"
             android:configChanges="orientation|keyboard|screenSize"
@@ -86,6 +83,12 @@
         </activity>
         <activity
             android:name=".ui.activities.completed_opd.CompletedOpdActivity"
+            android:configChanges="orientation|keyboard|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".ui.activities.ForgotPasswordWebViewActivity"
             android:configChanges="orientation|keyboard|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
