--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,7 +96,12 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ui.activities.my_patients.AddNewPatientWebViewActivity"
+            android:name=".ui.activities.my_patients.add_new_patient.AddNewPatientWebViewActivity"
+            android:configChanges="orientation|keyboard|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.activities.my_patients.add_new_patient.AddNewPatientActivity"
             android:configChanges="orientation|keyboard|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -205,7 +210,11 @@
         </receiver>
 
         <activity
-            android:name=".ui.activities.ZoomImageViewActivity"
+            android:name=".ui.activities.zoom_images.ZoomImageViewActivity"
+            android:label="@string/title_activity_zoomview"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.activities.zoom_images.MultipleImageWithSwipeAndZoomActivity"
             android:label="@string/title_activity_zoomview"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
