--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -192,6 +192,7 @@
 
         <service android:name=".services.MQTTService" />
         <service android:name=".services.ChatBackUpService" />
+        <service android:name=".services.LoadAllPatientsService" />
 
         <receiver
             android:name=".broadcast_receivers.ReplayBroadcastReceiver"
