--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 
 android {
     signingConfigs {
@@ -120,6 +125,9 @@ dependencies {
         transitive = true;
     }
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+        transitive = true;
+    }
 }
 //apply plugin: 'com.google.gms.google-services'
 
