--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,8 @@ dependencies {
         transitive = true;
     }
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+
 }
 //apply plugin: 'com.google.gms.google-services'
 
