--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,11 +79,13 @@
             android:name=".ui.activities.new_patient.NewPatientActivity"
             android:configChanges="orientation|keyboard|screenSize"
             android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.completed_opd.CompletedOpdActivity"
             android:configChanges="orientation|keyboard|screenSize"
             android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activities.ForgotPasswordWebViewActivity"
