--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,7 +126,7 @@ dependencies {
     }
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
 
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
 
     compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true;
