--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -133,7 +133,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+            android:theme="@style/AppTheme"/>
 
         <activity
             android:name=".ui.fragments.patient.my_patient.SendSmsPatientActivity"
