findbugs plugin added in gradle and in settings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'findbugs'
+
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -145,3 +147,21 @@ configurations.all {
         }
     }
 }
+
+task customFindbugs(type: FindBugs) {
+    ignoreFailures = true
+    effort = "default"
+    reportLevel = "medium"
+    classes = files("$project.buildDir/intermediates/classes")
+    excludeFilter = file("$rootProject.rootDir/config/findbugs/exclude.xml")
+
+    source = fileTree('src/main/java/')
+    classpath = files()
+    reports {
+        xml.enabled false
+        html.enabled true
+        html.setDestination(file("$project.buildDir/outputs/findbugs/findbugs-output.html"))
+    }
+}
+// UPDATE: renamed the task to customFindbugs and made it automatically be called when build is called
+build.dependsOn customFindbugs
