--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,40 +83,36 @@ dependencies {
     compile project(':advanced_recycler')
 
     // Recommended
-    compile(project(':bottomsheetpickers')) {
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'com.android.support', module: 'design'
-    }
-
+    compile(project(':bottomsheetpickers'))
     compile project(':materialdrawer') // For drawer layout
     compile project(':filepicker')
     compile project(':slideview')
     compile project(':crystalrangeseekbar')
     compile project(':fabmenu')
 
-    compile "com.android.support:gridlayout-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
     compile "com.android.support:cardview-v7:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
-    compile "com.android.support:design:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
-    //    compile 'com.google.android.gms:play-services:10.2.4'
-    compile('com.github.hotchemi:permissionsdispatcher:2.4.0') {
-        // if you don't use android.app.Fragment you can exclude support for them
-        exclude module: "support-v13"
-    }
+
     compile 'com.google.android.gms:play-services-auth:11.0.4'
     compile 'com.google.android.gms:play-services-places:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
+
+    compile ('com.github.hotchemi:permissionsdispatcher:2.4.0') {
+        // if you don't use android.app.Fragment you can exclude support for them
+        exclude module: "support-v13"
+    }
+
     compile 'joda-time:joda-time:2.9.9'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support.constraint:constraint-layout:1.1.2'
-    compile 'com.facebook.android:facebook-android-sdk:4.23.+'
+    compile 'com.facebook.android:facebook-android-sdk:4.26.0'
     compile 'com.android.support:multidex:1.0.3'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.3.1'
-//    compile 'com.tonyodev.fetch:fetch:1.1.3'
+
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
