--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     compile "com.android.support:support-v4:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
     compile "com.android.support:design:${project.ANDROID_SUPPORT_LIBRARY_VERSION}"
     testCompile 'junit:junit:4.12'
-    compile 'com.github.bumptech.glide:glide:4.7.1'
+    compile 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
 }
 
 def siteUrl = 'https://github.com/DroidNinja/Android-FilePicker'      // Homepage URL of the library
