--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,15 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        jcenter()
         maven {
             url 'https://maven.fabric.io/public'
         }
     }
     dependencies {
 
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
         classpath 'com.google.gms:google-services:3.0.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
@@ -23,11 +23,11 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
         maven {
-            url 'http://dl.bintray.com/amulyakhare/maven'
+            url 'https://maven.fabric.io/public'
         }
-        google()
     }
 }
 
